--- a/modules/infrastructure/src/main/resources/fp-frontend/public/css/fp/fp.css
+++ b/modules/infrastructure/src/main/resources/fp-frontend/public/css/fp/fp.css
@@ -1,3 +1,4 @@
+/* 共通 */
 html {
   height: 100%;
 }
@@ -5,4 +6,25 @@ html {
 body {
   height: 100%;
   background-color: #E6E6FA
+}
+
+/* ヘッダ */
+#fp-hero {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+/* メニュー */
+.fp-menu {
+  margin-left:1rem;
+}
+
+/* システム名 */
+.fp-system-title {
+  margin-right: 1rem;
+}
+
+/* メインコンテンツエリア */
+.fp-content-main {
+  margin-right: 1rem;
 }
